<resources>
    <string name="app_name">Calculadora2</string>
    <string name="desempilhar">desempilhar</string>
    <string name="vezes">*</string>
    <string name="plus">+</string>
    <string name="ifem">-</string>
    <string name="barra">/</string>
    <string name="numero">número</string>
    <string name="empilhar">empilhar</string>
    <string name="digite_um_numero">Digite um número</string>
    <string name="stack">Começe a sua pilha!</string>
    <string name="number">Número:</string>
</resources>