<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/label_numero"
        android:layout_width="96dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inserir"
        android:layout_width="192dp"
        android:layout_height="183dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:ems="10"

        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/label_numero"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PxUsage" />

    <Button
        android:id="@+id/empilhar"
        android:layout_width="490px"
        android:layout_height="150px"
        android:layout_marginTop="340dp"
        android:onClick="insercao"
        android:text="@string/empilhar"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PxUsage"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/desempilhar"
        android:layout_width="490px"
        android:layout_height="150px"
        android:layout_marginStart="4dp"
        android:layout_marginTop="340dp"
        android:onClick="apagar"
        android:text="@string/desempilhar"
        app:layout_constraintStart_toEndOf="@+id/empilhar"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PxUsage" />

    <Button
        android:id="@+id/adicao"
        android:layout_width="200px"
        android:layout_height="150px"
        android:layout_marginStart="35dp"
        android:layout_marginTop="250dp"
        android:onClick="somar"
        android:text="@string/plus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PxUsage" />

    <Button
        android:id="@+id/subtracao"
        android:layout_width="200px"
        android:layout_height="150px"
        android:layout_marginStart="10dp"
        android:layout_marginTop="250dp"
        android:onClick="subtrair"
        android:text="@string/ifem"
        app:layout_constraintStart_toEndOf="@+id/adicao"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PxUsage" />

    <Button
        android:id="@+id/multiplicacao"
        android:layout_width="200px"
        android:layout_height="150px"
        android:layout_marginStart="10dp"
        android:layout_marginTop="250dp"
        android:onClick="multiplicar"
        android:text="@string/vezes"
        app:layout_constraintStart_toEndOf="@+id/subtracao"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PxUsage" />

    <Button
        android:id="@+id/divisao"
        android:layout_width="200px"
        android:layout_height="150px"
        android:layout_marginStart="10dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="35dp"
        android:onClick="divisao"
        android:text="@string/barra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/multiplicacao"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PxUsage" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="@string/stack"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PxUsage"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>